<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.tamaramamedova.weatherapp.AddLocationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginBottom="14dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/AppName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/Location"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/EnterButton"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="329dp" />

    <ImageView
        android:layout_marginTop="@dimen/A14dp"
        android:id="@+id/imageView"
        android:layout_width="@dimen/MainIcon"
        android:layout_height="@dimen/MainIcon"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        app:srcCompat="@drawable/sun" />


</RelativeLayout>


